--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -28,8 +28,8 @@
                 android:layout_height="match_parent"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
-                android:contentDescription="@{viewModel.pictureOfDay.title}"
-                app:showPictureOfDay="@{viewModel.pictureOfDay.url}"
+                android:contentDescription="@{viewModel.picture.title}"
+                app:showPictureOfDay="@{viewModel.picture.url}"
                 app:srcCompat="@drawable/placeholder_picture_of_day"/>
 
             <TextView
