Modified picture of day scale type.

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -27,10 +27,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:adjustViewBounds="true"
-                android:scaleType="centerCrop"
+                android:scaleType="fitXY"
                 android:contentDescription="@{viewModel.picture.title}"
                 app:showPictureOfDay="@{viewModel.picture.url}"
-                app:srcCompat="@drawable/placeholder_picture_of_day"/>
+                app:srcCompat="@drawable/picture_of_day_sample"/>
 
             <TextView
                 android:id="@+id/textView"
