--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -27,10 +28,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:adjustViewBounds="true"
-                android:scaleType="fitXY"
                 android:contentDescription="@{viewModel.picture.title}"
+                android:scaleType="fitXY"
                 app:showPictureOfDay="@{viewModel.picture.url}"
-                app:srcCompat="@drawable/picture_of_day_sample"/>
+                tools:srcCompat="@drawable/picture_of_day_sample" />
 
             <TextView
                 android:id="@+id/textView"
